# nucpp

./: .gitignore  Makefile  README.md  nucpp.cabal
.github/workflows/: haskell-ci.yml
exe-nucpp/: nucpp.hs
fixtures/: cabal-macros-01.i  example01.expr  ghc_tmp.h  ghcversion-01.i  ghcversion.h  multiline-01.i  singletons-bool-02.i
src/: NuCPP.hs
src/NuCPP/: Args.hs  Imports.hs  Optics.hs  SnocList.hs
tests/: nucpp-tests.hs
tests/NuCPP/Test/: Args.hs  Golden.hs
